Fri Jan  9 09:41:51 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Portable_Interceptors/AdvSlotExt/run_test.pl:
          tests/Portable_Interceptors/Redirection/run_test.pl:
          tests/Portable_Interceptors/Bug_3079/run_test.pl:
          Made "Fuzz" compliant.

Fri Jan  9 08:28:56 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3542_Regression/*:
          New regression test for bugzilla 3542

Thu Jan  8 19:10:56 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Portable_Interceptors/Request_Interceptor_Flow/run_test.pl:
          Made "Fuzz" compliant. Added new line add the end of the file

Thu Jan  8 19:10:56 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Portable_Interceptors/AMI/run_test.pl:
        * tests/Portable_Interceptors/PolicyFactory/run_test.pl:
        * tests/Portable_Interceptors/Request_Interceptor_Flow/run_test.pl:
          Made "Fuzz" compliant.

Thu Jan  8 18:11:56 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Portable_Interceptors/Collocated/Service_Context_Manipulation/run_test.pl:
        * tests/Portable_Interceptors/ForwardRequest/run_test.pl:
        * tests/Portable_Interceptors/Processing_Mode_Policy/Collocated/run_test.pl:
        * tests/Portable_Interceptors/Processing_Mode_Policy/Remote/run_test.pl:
        * tests/Portable_Interceptors/Service_Context_Manipulation/run_test.pl:
          Made "Fuzz" compliant.

Thu Jan  8 11:41:27 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Portable_Interceptors/AdvSlot/run_test.pl:
        * tests/Portable_Interceptors/AdvSlotDblCpy/run_test.pl:
          Made "Fuzz" compliant.

Thu Jan  8 11:07:35 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Portable_Interceptors/Bug_1559/run_test.pl:
        * tests/Portable_Interceptors/Processing_Mode_Policy\Collocated/run_test.pl:
          Clean up used ior files.

Thu Jan  8 10:30:35 UTC 2009  Marcel Smit  <msmit@remedy.nl>
