@@ -1,8 +1,13 @@
+Fri Jan  9 12:08:46 UTC 2009  Marcel Smit  <msmit@remedy.nl>
+
+        * tests/Portable_Interceptors/Bug_3079/run_test.pl:
+          Resolved some copy/paste errors.
+
 Fri Jan  9 09:41:51 UTC 2009  Marcel Smit  <msmit@remedy.nl>
 
         * tests/Portable_Interceptors/AdvSlotExt/run_test.pl:
-          tests/Portable_Interceptors/Redirection/run_test.pl:
-          tests/Portable_Interceptors/Bug_3079/run_test.pl:
+        * tests/Portable_Interceptors/Redirection/run_test.pl:
+        * tests/Portable_Interceptors/Bug_3079/run_test.pl:
           Made "Fuzz" compliant.
 
 Fri Jan  9 08:28:56 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
